--- a/website.css
+++ b/website.css
@@ -198,11 +198,9 @@ body {
 }
 
 .project-details-container {
-  margin: 0;
-  padding-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  font-size: 40px; 
+  text-align: center;
+  font-size: 50px;
 }
