--- a/screenshots.css
+++ b/screenshots.css
@@ -11,6 +11,7 @@ body {
   border-bottom-style: solid;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: fixed;
   top: 0; 
   width: 100%;
@@ -23,27 +24,44 @@ body {
   font-size: 35px;
   color: white;
   margin: 0;
-  margin-left: 60px;
+  margin-left: 35px;
   margin-top: 20px;
   margin-bottom: 10px;
-  
 }
+
 
 .header-link {
   text-decoration: none;
   
 }
 
-.header-link:hover {
-  text-decoration: underline;
-  text-decoration-color: white;
-  
+.header-link .header {
+  transition: color 0.3s ease, text-decoration-color 0.3s ease;
 }
 
-.contact-info {
-  margin-top: 30px;
-  margin-right: 40px;
-  font-size: 20px;
+.header-link:hover .header {
+  color: rgb(240, 128, 128); /* Coral color for text */
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  margin-right: 50px;
+  margin-top: 10px;
+}
+
+.button-container button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: #ffffff;
+  transition: color 0.3s ease;
+}
+
+.button-container button:hover {
+  color: rgb(240, 128, 128);
 }
 
 .image-grid {
