--- a/website.css
+++ b/website.css
@@ -11,6 +11,7 @@ body {
   border-bottom-style: solid;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: fixed;
   top: 0; 
   width: 100%;
@@ -23,182 +24,215 @@ body {
   font-size: 35px;
   color: white;
   margin: 0;
-  margin-left: 60px;
+  margin-left: 35px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
+
 
 .header-link {
   text-decoration: none;
   
 }
 
-.header-link:hover {
-  text-decoration: underline;
-  text-decoration-color: white;
-  
+.header-link .header {
+  transition: color 0.3s ease, text-decoration-color 0.3s ease;
 }
 
-.contact-info {
-  margin-top: 30px;
-  margin-right: 40px;
-  font-size: 20px;
+.header-link:hover .header {
+  color: rgb(240, 128, 128); /* Coral color for text */
 }
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  margin-right: 50px;
+  margin-top: 10px;
+}
+
+.button-container button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: #ffffff;
+  transition: color 0.3s ease;
+}
+
+.button-container button:hover {
+  color: rgb(240, 128, 128);
+}
+
+
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  font-size: 45px;
+  padding-top: 35px;
+  border-bottom-width: 4px;
+  border-bottom-style: solid;
+  height: calc(100vh - 100px);
+  padding: 20px;
+  box-sizing: border-box;
+  padding-top: 50px;
+}
+
+.welcome-text-box-container {
+  display: flex;
+  justify-content: center; /* Centers the text box horizontally */
+  align-items: center; /* Centers the text box vertically */
+  height: 60%; /* Adjust based on how much space you want for the text box */
+  flex-grow: 1;
+}
+
 
 .body-container {
   display: flex;
   flex-direction: column;
   font-size: 45px;
-  padding-top: 30px;
+  padding-top: 35px;
   padding-bottom: 60px;
-  border-bottom-width: 1px;
+  border-bottom-width: 4px;
   border-bottom-style: solid;
 }
 
+
+
+
 .body-title {
   text-align: center;
-  padding: 10px;
-  padding-bottom: 60px;
+  font-size: 3vw; /* Adjusts text size based on viewport width */
 }
 
-.about-me-content {
+.project-header {
+  text-align: center;
+  padding-top: 30px;
+}
+
+
+.text-box-container {
   display: flex;
-  justify-content: center;
+  justify-content: center; /* Centers the text box horizontally */
+  align-items: center; /* Centers the text box vertically */
+  height: 60%; /* Adjust based on how much space you want for the text box */
 }
 
-.about-me-image-text-container {
+.text-box {
+  padding-top: 15px;
+  max-width: 40%; /* Adjust the width of the text box */
+  border-radius: 10px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1000px; 
-  flex-wrap: wrap;
-}
-
-.about-me-image {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: 300px;
-  min-width: 200px;
-  padding-right: 50px; 
+  flex-direction: column; /* Stack paragraphs vertically */
+  text-align: center; /* Center text horizontally */
 }
 
 .about-me-text {
-  width: 50%;
-  font-size: 20px;
-  text-align: center;
-  flex-wrap: wrap;
+  font-size: 1.2vw; /* Adjusts text size based on viewport width */
+  line-height: 1.5;
+  margin-bottom: 5px;
 }
+
+
 
 .project-container {
   display: flex;
-  padding-bottom: 100px;
-}
-
-.project-image {
-  flex: 1;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  max-width: 50%;
-  margin-left: 50px;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
-.project-image img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: 70%;
-}
-
-.project-description {
-  flex: 1; 
+.project-left {
+  flex: 1; /* Takes up half the container */
   display: flex;
-  flex-direction: column;
+  justify-content: center; /* Centers image horizontally */
+  align-items: center; /* Centers image vertically */
+  margin-right: 2%;
+  margin-top: 3%;
+}
+
+.project-left img {
+  width: 75%; /* Makes the image smaller */
+  height: auto; /* Keeps the aspect ratio */
+}
+
+.project-right {
+  flex: 1; /* Takes up the other half of the container */
+  margin-right: 5%;
 }
 
 .project-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
-  font-weight: 900;
+  text-align: center;
+  font-size: 2.5rem; /* Large font for the title */
 }
 
-.project-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  width: 600px;
+.project-description {
   text-align: center;
+  font-size: 2vh; /* Smaller text for the description */
+  line-height: 1.6;
+  max-width: 100%;
+  margin: 0 auto; /* Centers the content horizontally */
 }
 
 .link {
-  color: orange;
+  color: rgb(240, 128, 128); /* Custom link color */
+  text-decoration: none;
 }
 
 .link:hover {
+  text-decoration: underline;
   color: rgb(15, 27, 49);
 }
 
+.project-title p {
+  display: inline-flex; /* Use inline-flex to align the text and image */
+  align-items: center; /* Vertically center the image and text */
+  font-size: 2.5rem; /* Same size as your title */
+}
+
+.title-icon {
+  height: 1em; /* Makes the image's height match the font size */
+  margin-left: 10px; /* Adds some space between the text and the image */
+}
+
+
+
 .project-container-flipped {
   display: flex;
-  padding-bottom: 100px;
-}
-
-.project-description-flipped {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
+  margin-top: 50px;
 }
 
-.project-image-flipped {
-  flex: 1;
-}
-
-.project-title-flipped {
-  font-size: 40px;
-  font-weight: 900;
-  padding-bottom: 50px;
-  padding-left: 125px;
-}
-
-.project-details-flipped {
-  font-size: 20px;
-  width: 600px;
-  flex: 1;
+.project-left-flipped {
+  flex: 1; /* Takes up half the container */
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 125px;
-  text-align: center;
+  justify-content: center; /* Centers image horizontally */
+  align-items: center; /* Centers image vertically */
+  margin-left: 2%;
+  margin-top: 3%;
 }
 
-.project-image-flipped {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-right: 50px;
+.project-right-flipped {
+  flex: 1; /* Takes up the other half of the container */
+  margin-left: 5%;
 }
 
-.project-image-flipped img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: 70%;
+.project-left-flipped img {
+  width: 75%; /* Makes the image smaller */
+  height: auto; /* Keeps the aspect ratio */
 }
+
+
+.pong-image {
+  max-width: 70%;
+}
+
+
 
 .project-details-container {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-top: 90px;
 }
