--- a/screenshots.css
+++ b/screenshots.css
@@ -1,101 +1,1 @@
-body {
-  background-color: rgb(37, 53, 81);
-  font-family: 'Averia Serif Libre', serif;
-  color: white;
-  margin: 0;
-  padding-top: 150px;
-}
-
-.title-container {
-  border-bottom-width: 4px;
-  border-bottom-style: solid;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0; 
-  width: 100%;
-  background-color: rgb(15, 27, 49);
-  z-index: 100; 
-  padding: 10px; 
-}
-
-.header {
-  font-size: 35px;
-  color: white;
-  margin: 0;
-  margin-left: 35px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-
-.header-link {
-  text-decoration: none;
-  
-}
-
-.header-link .header {
-  transition: color 0.3s ease, text-decoration-color 0.3s ease;
-}
-
-.header-link:hover .header {
-  color: rgb(240, 128, 128); /* Coral color for text */
-}
-
-.button-container {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  margin-right: 50px;
-  margin-top: 10px;
-}
-
-.button-container button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 30px;
-  color: #ffffff;
-  transition: color 0.3s ease;
-}
-
-.button-container button:hover {
-  color: rgb(240, 128, 128);
-}
-
-.image-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: auto;
-  grid-gap: 10px;
-  justify-items: center; 
-  align-items: center; 
-
-}
-
-.image-grid img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: 450px;
-  padding-bottom: 30px;
-}
-
-@media (max-width: 700px) {
-  .image-grid {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (min-width: 700px) and (max-width: 1400px) {
-  .image-grid {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media (min-width: 1400px) {
-  .image-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
+body{background-color:#253551;font-family:'Averia Serif Libre',serif;color:#fff;margin:0;padding-top:150px}.title-container{border-bottom-width:4px;border-bottom-style:solid;display:flex;justify-content:space-between;align-items:center;position:fixed;top:0;width:100%;background-color:#0f1b31;z-index:100;padding:10px}.header{font-size:35px;color:#fff;margin:20px 0 10px 35px}.header-link{text-decoration:none}.header-link .header{transition:color .3s,text-decoration-color .3s}.button-container button:hover,.header-link:hover .header{color:#f08080}.button-container{display:flex;gap:15px;align-items:center;margin-right:50px;margin-top:10px}.button-container button{background-color:transparent;border:none;cursor:pointer;font-size:30px;color:#fff;transition:color .3s}.image-grid{display:grid;grid-template-columns:1fr 1fr 1fr;grid-auto-rows:auto;grid-gap:10px;justify-items:center;align-items:center}.image-grid img{max-width:100%;max-height:100%;height:auto;width:450px;padding-bottom:30px}@media (max-width:700px){.image-grid{grid-template-columns:1fr}}@media (min-width:700px) and (max-width:1400px){.image-grid{grid-template-columns:1fr 1fr}}@media (min-width:1400px){.image-grid{grid-template-columns:1fr 1fr 1fr}}
