--- a/website.css
+++ b/website.css
@@ -1,238 +1,1 @@
-body {
-  background-color: rgb(37, 53, 81);
-  font-family: 'Averia Serif Libre', serif;
-  color: white;
-  margin: 0;
-  padding-top: 100px;
-}
-
-.title-container {
-  border-bottom-width: 4px;
-  border-bottom-style: solid;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0; 
-  width: 100%;
-  background-color: rgb(15, 27, 49);
-  z-index: 100; 
-  padding: 10px; 
-}
-
-.header {
-  font-size: 35px;
-  color: white;
-  margin: 0;
-  margin-left: 35px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-
-.header-link {
-  text-decoration: none;
-  
-}
-
-.header-link .header {
-  transition: color 0.3s ease, text-decoration-color 0.3s ease;
-}
-
-.header-link:hover .header {
-  color: rgb(240, 128, 128); /* Coral color for text */
-}
-
-.button-container {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  margin-right: 50px;
-  margin-top: 10px;
-}
-
-.button-container button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 30px;
-  color: #ffffff;
-  transition: color 0.3s ease;
-}
-
-.button-container button:hover {
-  color: rgb(240, 128, 128);
-}
-
-
-.welcome-container {
-  display: flex;
-  flex-direction: column;
-  font-size: 45px;
-  padding-top: 35px;
-  border-bottom-width: 4px;
-  border-bottom-style: solid;
-  height: calc(100vh - 100px);
-  padding: 20px;
-  box-sizing: border-box;
-  padding-top: 50px;
-}
-
-.welcome-text-box-container {
-  display: flex;
-  justify-content: center; /* Centers the text box horizontally */
-  align-items: center; /* Centers the text box vertically */
-  height: 60%; /* Adjust based on how much space you want for the text box */
-  flex-grow: 1;
-}
-
-
-.body-container {
-  display: flex;
-  flex-direction: column;
-  font-size: 45px;
-  padding-top: 35px;
-  padding-bottom: 60px;
-  border-bottom-width: 4px;
-  border-bottom-style: solid;
-}
-
-
-
-
-.body-title {
-  text-align: center;
-  font-size: 3vw; /* Adjusts text size based on viewport width */
-}
-
-.project-header {
-  text-align: center;
-  padding-top: 30px;
-}
-
-
-.text-box-container {
-  display: flex;
-  justify-content: center; /* Centers the text box horizontally */
-  align-items: center; /* Centers the text box vertically */
-  height: 60%; /* Adjust based on how much space you want for the text box */
-}
-
-.text-box {
-  padding-top: 15px;
-  max-width: 40%; /* Adjust the width of the text box */
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column; /* Stack paragraphs vertically */
-  text-align: center; /* Center text horizontally */
-}
-
-.about-me-text {
-  font-size: 1.2vw; /* Adjusts text size based on viewport width */
-  line-height: 1.5;
-  margin-bottom: 5px;
-}
-
-
-
-.project-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.project-left {
-  flex: 1; /* Takes up half the container */
-  display: flex;
-  justify-content: center; /* Centers image horizontally */
-  align-items: center; /* Centers image vertically */
-  margin-right: 2%;
-  margin-top: 3%;
-}
-
-.project-left img {
-  width: 75%; /* Makes the image smaller */
-  height: auto; /* Keeps the aspect ratio */
-}
-
-.project-right {
-  flex: 1; /* Takes up the other half of the container */
-  margin-right: 5%;
-}
-
-.project-title {
-  text-align: center;
-  font-size: 2.5rem; /* Large font for the title */
-}
-
-.project-description {
-  text-align: center;
-  font-size: 2vh; /* Smaller text for the description */
-  line-height: 1.6;
-  max-width: 100%;
-  margin: 0 auto; /* Centers the content horizontally */
-}
-
-.link {
-  color: rgb(240, 128, 128); /* Custom link color */
-  text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: underline;
-  color: rgb(15, 27, 49);
-}
-
-.project-title p {
-  display: inline-flex; /* Use inline-flex to align the text and image */
-  align-items: center; /* Vertically center the image and text */
-  font-size: 2.5rem; /* Same size as your title */
-}
-
-.title-icon {
-  height: 1em; /* Makes the image's height match the font size */
-  margin-left: 10px; /* Adds some space between the text and the image */
-}
-
-
-
-.project-container-flipped {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.project-left-flipped {
-  flex: 1; /* Takes up half the container */
-  display: flex;
-  justify-content: center; /* Centers image horizontally */
-  align-items: center; /* Centers image vertically */
-  margin-left: 2%;
-  margin-top: 3%;
-}
-
-.project-right-flipped {
-  flex: 1; /* Takes up the other half of the container */
-  margin-left: 5%;
-}
-
-.project-left-flipped img {
-  width: 75%; /* Makes the image smaller */
-  height: auto; /* Keeps the aspect ratio */
-}
-
-
-.pong-image {
-  max-width: 70%;
-}
-
-
-
-.project-details-container {
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding-top: 90px;
-}
+.middle,.welcome-container{height:calc(100vh - 100px);display:flex}.header-link,.link{text-decoration:none}body{background-color:#253551;font-family:'Averia Serif Libre',serif;color:#fff;margin:0;padding-top:100px}.title-container{border-bottom-width:4px;border-bottom-style:solid;display:flex;justify-content:space-between;align-items:center;position:fixed;top:0;width:100%;background-color:#0f1b31;z-index:100;padding:10px}.header{font-size:35px;color:#fff;margin:20px 0 10px 35px}.button-container button:hover,.header-link:hover .header,.link{color:#f08080}.header-link .header{transition:color .3s,text-decoration-color .3s}.button-container{display:flex;gap:15px;align-items:center;margin-right:50px;margin-top:10px}.button-container button{background-color:transparent;border:none;cursor:pointer;font-size:30px;color:#fff;transition:color .3s}.welcome-container{border-bottom:4px solid #fff;padding:20px;box-sizing:border-box}.welcome-section{display:flex;justify-content:center;align-items:center;text-align:center}.left,.right{flex:2;display:flex;justify-content:center;align-items:flex-start;position:relative}.middle{flex:3;flex-direction:column}.body-title{font-weight:700;align-self:center;padding-bottom:80px}.welcome-text-box{display:flex;flex-direction:column;justify-content:center;align-items:center;height:60%;font-size:18px;line-height:1.5;text-align:center;padding-bottom:100px}.welcome-image{width:75%;object-fit:contain}.left .welcome-image,.right .welcome-image{position:absolute;top:75%;transform:translateY(-50%);max-width:100%;height:auto}.body-container{display:flex;flex-direction:column;font-size:45px;padding-top:35px;padding-bottom:60px;border-bottom-width:4px;border-bottom-style:solid}.body-title{text-align:center;font-size:3vw}.project-header{text-align:center;padding-top:30px}.text-box-container{display:flex;justify-content:center;align-items:center;height:60%}.text-box{padding-top:15px;max-width:40%;border-radius:10px;display:flex;flex-direction:column;text-align:center}.about-me-text{margin:40px 0 5px;font-size:1.2vw;line-height:1.5}.project-container,.project-container-flipped{display:flex;justify-content:space-between;align-items:center;margin-top:50px}.project-left{flex:1;display:flex;justify-content:center;align-items:center;margin-right:2%;margin-top:3%}.project-left img,.project-left-flipped img{width:75%;height:auto}.project-right{flex:1;margin-right:5%}.project-title{text-align:center;font-size:2.5rem}.project-description{text-align:center;font-size:2vh;line-height:1.6;max-width:100%;margin:0 auto}.link:hover{text-decoration:underline;color:#0f1b31}.project-title p{display:inline-flex;align-items:center;font-size:2.5rem}.title-icon{height:1em;margin-left:10px}.project-left-flipped{flex:1;display:flex;justify-content:center;align-items:center;margin-left:2%;margin-top:3%}.project-right-flipped{flex:1;margin-left:5%}.pong-image{max-width:70%}.project-details-container{justify-content:center;align-items:center;text-align:center;padding-top:90px}
